--- a/main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.css
+++ b/main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.css
@@ -27,7 +27,8 @@ main {
 #draggable-item {
     width: 50px;
     height: 50px;
-    background-color: red;
+    background-image: url('../../assets/bowl-of-noodles-pixilart.png');
+    background-size: cover;
     position: absolute;
     top: 0;
     left: 0;
