--- a/main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.css
+++ b/main/cozy-restaurant-game/bowl-of-noodles/bowl-of-noodles.css
@@ -25,9 +25,9 @@ main {
    Draggable Square
 ============================== */
 #draggable-item {
-    width: 50px;
-    height: 50px;
-    background-image: url('../../assets/bowl-of-noodles-pixilart.png');
+    width: 500px;
+    height: 500px;
+    background-image: url('../../../assets/bowl-of-noodles-pixilart.png');
     background-size: cover;
     position: absolute;
     top: 0;
